// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainMenu /> <MainMenu /> with developerMode = false renders correctly 1`] = `
<WithStyles(ForwardRef(List))
  id="mainMenu"
>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="homeMenuItem"
    onClick={[Function]}
    selected={true}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(HomeIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Home"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="savedSpacesMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(SaveIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Saved Spaces"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <Offline
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(Tooltip))
      placement="right"
      title="You need an internet connection."
    >
      <div>
        <WithStyles(ForwardRef(MenuItem))
          button={true}
          disabled={true}
          id="spacesNearbyMenuItem"
          onClick={[Function]}
          selected={false}
        >
          <WithStyles(ForwardRef(ListItemIcon))>
            <Memo(ForwardRef(SearchIcon)) />
          </WithStyles(ForwardRef(ListItemIcon))>
          <WithStyles(ForwardRef(ListItemText))
            primary="Spaces Nearby"
          />
        </WithStyles(ForwardRef(MenuItem))>
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </Offline>
  <Online
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(MenuItem))
      button={true}
      id="spacesNearbyMenuItem"
      onClick={[Function]}
      selected={false}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <Memo(ForwardRef(SearchIcon)) />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Spaces Nearby"
      />
    </WithStyles(ForwardRef(MenuItem))>
  </Online>
  <Offline
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(Tooltip))
      placement="right"
      title="You need an internet connection."
    >
      <div>
        <WithStyles(ForwardRef(MenuItem))
          button={true}
          disabled={true}
          id="visitMenuItem"
          onClick={[Function]}
          selected={false}
        >
          <WithStyles(ForwardRef(ListItemIcon))>
            <Memo(ForwardRef(LanguageIcon)) />
          </WithStyles(ForwardRef(ListItemIcon))>
          <WithStyles(ForwardRef(ListItemText))
            primary="Visit a Space"
          />
        </WithStyles(ForwardRef(MenuItem))>
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </Offline>
  <Online
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(MenuItem))
      button={true}
      id="visitMenuItem"
      onClick={[Function]}
      selected={false}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <Memo(ForwardRef(LanguageIcon)) />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Visit a Space"
      />
    </WithStyles(ForwardRef(MenuItem))>
  </Online>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="loadMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(PublishIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Load"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="dashboardMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(ShowChartIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Dashboard"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="settingsMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(SettingsIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Settings"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="signOutMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(AccountCircleIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Sign Out"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    onClick={[Function]}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(ExitToAppIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Quit"
    />
  </WithStyles(ForwardRef(MenuItem))>
</WithStyles(ForwardRef(List))>
`;

exports[`<MainMenu /> <MainMenu /> with developerMode = true renders correctly 1`] = `
<WithStyles(ForwardRef(List))
  id="mainMenu"
>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="homeMenuItem"
    onClick={[Function]}
    selected={true}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(HomeIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Home"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="savedSpacesMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(SaveIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Saved Spaces"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <Offline
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(Tooltip))
      placement="right"
      title="You need an internet connection."
    >
      <div>
        <WithStyles(ForwardRef(MenuItem))
          button={true}
          disabled={true}
          id="spacesNearbyMenuItem"
          onClick={[Function]}
          selected={false}
        >
          <WithStyles(ForwardRef(ListItemIcon))>
            <Memo(ForwardRef(SearchIcon)) />
          </WithStyles(ForwardRef(ListItemIcon))>
          <WithStyles(ForwardRef(ListItemText))
            primary="Spaces Nearby"
          />
        </WithStyles(ForwardRef(MenuItem))>
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </Offline>
  <Online
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(MenuItem))
      button={true}
      id="spacesNearbyMenuItem"
      onClick={[Function]}
      selected={false}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <Memo(ForwardRef(SearchIcon)) />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Spaces Nearby"
      />
    </WithStyles(ForwardRef(MenuItem))>
  </Online>
  <Offline
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(Tooltip))
      placement="right"
      title="You need an internet connection."
    >
      <div>
        <WithStyles(ForwardRef(MenuItem))
          button={true}
          disabled={true}
          id="visitMenuItem"
          onClick={[Function]}
          selected={false}
        >
          <WithStyles(ForwardRef(ListItemIcon))>
            <Memo(ForwardRef(LanguageIcon)) />
          </WithStyles(ForwardRef(ListItemIcon))>
          <WithStyles(ForwardRef(ListItemText))
            primary="Visit a Space"
          />
        </WithStyles(ForwardRef(MenuItem))>
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </Offline>
  <Online
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(MenuItem))
      button={true}
      id="visitMenuItem"
      onClick={[Function]}
      selected={false}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <Memo(ForwardRef(LanguageIcon)) />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Visit a Space"
      />
    </WithStyles(ForwardRef(MenuItem))>
  </Online>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="loadMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(PublishIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Load"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="dashboardMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(ShowChartIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Dashboard"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="developerMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(CodeIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Developer"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="settingsMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(SettingsIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Settings"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="signOutMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(AccountCircleIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Sign Out"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    onClick={[Function]}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <Memo(ForwardRef(ExitToAppIcon)) />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Quit"
    />
  </WithStyles(ForwardRef(MenuItem))>
</WithStyles(ForwardRef(List))>
`;
